[project]
name = "rl-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "autorom>=0.6.1",
    "modal>=1.2.1",
    "optuna>=4.5.0",
    "pyyaml>=6.0.3",
    "stable-baselines3[extra]>=2.7.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
